--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+apply plugin: 'kotlin-kapt'
+
 buildscript {
     ext.kotlin_version = '1.3.21'
     repositories {
@@ -14,6 +16,8 @@ buildscript {
         // in the individual module build.gradle files
     }
 }
+
+
 
 allprojects {
     repositories {
