--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,9 +36,13 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
+    //room
     final room_version = '2.0.0'
 
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+
+    //recyclerview
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 
 }
